--- a/gigs.html
+++ b/gigs.html
@@ -3,11 +3,28 @@
 </head>
 
 <body>
-  {{> hello}}
+  {{> gigs}}
+
 </body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+<template name="gigs">
+  COMPANIES
+  <table class="gigs">
+    <tr>
+      <th>Name</th>
+      <th>Website</th>
+      <th>Location</th>
+    </tr>
+    {{#each companies}}
+      {{> company}}
+    {{/each}}
+  </div>
+</template>
+
+<template name="company">
+  <tr>
+    <td class="name">{{name}}</td>
+    <td class="website">{{website}}</td>
+    <td class="location">{{location}}</td>
+  </tr>
 </template>
